--- a/output/Makefile
+++ b/output/Makefile
@@ -5,3 +5,16 @@ all:
 	llc $(filename).ll
 	$(cc) $(filename).s -o $(filename).out
 	./$(filename).out
+
+test:
+	make filename=main
+	make filename=add
+	make filename=arithmetic
+	make filename=array
+	make filename=break
+	make filename=declare
+	make filename=if_else
+	make filename=sum
+	make filename=basic_io
+	make filename=sort
+	make filename=evaluate
